<resources>
    <string name="app_name">Shrinkio</string>
    <string name="To_shrinkio" translatable="false">to Shrinkio</string>
    <string name="title_activity_principal" translatable="false">Principal</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_login" translatable="false">Register</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_bottom" translatable="false">Shrinkio</string>
    <string name="shrinkIo" translatable="false">Shrinkio
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home" translatable="false">Shrinkio</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_item_list" translatable="false">Items</string>
    <string name="title_item_detail" translatable="false">Item Detail</string>
    <string name="title_activity_dash_board" translatable="false">DashBoard</string>
    <string name="language">Language</string>
    <string name="title_activity_side_bar" translatable="false">SideBar</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="sound">Sound</string>
    <string name="title_activity_nav_drawer" translatable="false">NavDrawer</string>
    <string name="prompt_name">Name</string>
    <string name="profile" translatable="false" />
    <string name="shrink" translatable="false">aadadaddaldafouahfhlfhauhfkshjfaojfhaw9fulhawfuhfuhnagufhawofjlawjfioewjfwjfjfef
    jfosfijilfjoejfljsfksnflnjflkhaf.hakfnriuhtohfojahdFOhfƒ
    foJNWFUKHWKRUGHJWFJNFjfsuoJFOÇsfe
    gg
    eaggegaega
    eggagggregafdGKJHGFDKJHGFDGHJ
    FHRIGUJOIGQHKSDFLAERHGOAWJFUJSGABGIULEG
    hgilguhuhgiuhgohgoçjougrhuhguerhtioeoyhitiirgojught
    tomabktggiyaotiyjp
    apagaggt
    wagaegagge</string>
    <string name="title_activity_messages">Messages</string>
    <string name="listing" translatable="false">Listing</string>
    <string name="deals" translatable="false">Deals</string>
    <string name="rates" translatable="false">Rates</string>
    <string name="watchlist" translatable="false">Watchlist</string>
    <string name="matching" translatable="false">Matching</string>
    <string name="home" translatable="false">Home</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="username" translatable="false">Username:</string>
    <string name="country">Country:</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="Messages">Messages</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="signed_out" translatable="false" />
    <string name="emailpassword_status_fmt" translatable="false" />
    <string name="firebase_status_fmt" translatable="false" />
    <string name="auth_failed" translatable="false" />
    <string name="title_activity_login3" translatable="false">Register</string>
    <string name="name">Name:</string>
    <string name="register">Register</string>
    <string name="login" translatable="false">Log In</string>
    <string name="title_activity_login2" translatable="false">Register</string>
    <string name="tomas">Tomas</string>
    <string name="_17" translatable="false">17</string>
    <string name="fun_playfull_etc" translatable="false">Fun, Playfull, etc...</string>
    <string name="No_account">Don\'t have an account yet?</string>
    <string name="Bio" translatable="false" />
    <string name="bio" translatable="false">Bio:</string>
    <string name="title_person_list" translatable="false">People</string>
    <string name="title_person_detail" translatable="false">Person Detail</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="title_activity_navigation" translatable="false">NavigationActivity</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="Profile">Profile</string>
    <string name="title_activity_profile" translatable="false" />
    <string name="communicate" translatable="false">communicate</string>
    <string name="People" translatable="false">People</string>
    <string name="open_drawer" translatable="false">Abrir</string>
    <string name="close_drawer" translatable="false">Fechar</string>
    <string name="add_tp_db" translatable="false">Add tp db</string>
    <string name="back_button" translatable="false">Back button</string>
    <string name="button" translatable="false" />
    <string name="BUtton" translatable="false">Button</string>
    <string name="Friend" translatable="false">+ FRIEND</string>
    <string name="Pass" translatable="false">Pass</string>
    <string name="title_activity_ads" translatable="false">Ads</string>
    <string name="interstitial_ad_sample" translatable="false">Interstitial Ad Sample</string>
    <string name="start_level" translatable="false">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="send_Message">Send Message</string>
    <string name="create_an_account">Create an account</string>
    <string name="or">or</string>
    <string name="welcome_to_shrinkio" translatable="false">Welcome to Shrinkio</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="Login" translatable="false">Login</string>
    <string name="what_would_you_like_to_be_called" translatable="false">What would you like to be called?</string>
    <string name="welcome">Welcome</string>
    <string name="tap_the_icon_to_choose_your_profile_image" translatable="false">Tap the icon to choose your profile image</string>
    <string name="Where_are_you_from">Where are you from?</string>
    <string name="Every_information_you_provide_here_will_be_classified" translatable="false">Every information you provide here will be classified!</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_country">Country</string>
    <string name="shrinkio" translatable="false">Shrinkio</string>
    <string name="people">People</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="add_post">add post</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="create_a_post">Create a post</string>
    <string name="send_post">send post</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_video">Add a video</string>
    <string name="video_image">Video/Image</string>
    <string name="continuar">Continue</string>
    <string name="account_set_up">Account set up</string>
    <string name="personal_info">Personal Info</string>
    <string name="have_an_account">Have an account?</string>
    <string name="new_user">New user?</string>
    <string name="city">City</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="data_de_nascimento2">Data De Nascimento:</string>
    <string name="personal_information">Personal Information</string>
    <string name="welcome2">Welcome!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
</resources>