<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity3"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center|top"
        android:text="@string/shrinkio"
        android:textColor="@color/licolor"
        android:padding="50dp"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/asup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/personal_information"
            android:textColor="#FAFAFA"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_toggle"
            android:gravity="center"
            android:autofillHints="@string/country"
            android:hint="@string/country"
            android:padding="15dp" />


        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_toggle"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/city"
            android:hint="@string/city"
            android:padding="15dp" />

        <TextView
            android:id="@+id/data_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/data_de_nascimento2"
            android:textColor="#FAFAFA" />

        <Button
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:layout_marginStart="10dp"
            android:textColor="#FAFAFA"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/continuar" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>