<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profile"
            android:clickable="true"
            android:scaleType="fitXY"
            android:focusable="true" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/item_image"
            android:text="@string/tomas"
            android:textColor="#FAFAFA"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileName"
            android:layout_toEndOf="@+id/item_image"
            android:text="@string/country"
            android:textColor="#FAFAFA"
            android:textSize="20sp" />

    </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>