<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Main2Activity"
    android:background="#FAFAFA">

    <ImageView
        android:id="@+id/LauncherIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:srcCompat="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome_to_shrinkio"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
        app:layout_constraintTop_toBottomOf="@+id/LauncherIcon"
        tools:layout_editor_absoluteX="95dp" />


    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_weight="0.5"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/or"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />

    <Button
        android:id="@+id/caButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/mybutton2"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/create_an_account"
        android:textColor="#FAFAFA"
        android:textSize="15sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="@+id/LoginBtn"
        app:layout_constraintStart_toStartOf="@+id/LoginBtn"
        app:layout_constraintTop_toBottomOf="@+id/or" />

</androidx.constraintlayout.widget.ConstraintLayout>